Provide additional details

--- a/standalone.html
+++ b/standalone.html
@@ -18,6 +18,9 @@
       border-radius: 10px;
       width: 150px;
     }
+    body {
+        background-color: lightblue;
+    }
   </style>
 </head>
 <body>
@@ -29,7 +32,8 @@
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
 
   <!-- Load our React component. -->
-  <script src="solutionStage3.jsx" defer type="text/babel"></script>
   <!-- <script src="account1.jsx"       defer type="text/babel"></script> -->
+  <!-- <script src="solutionStage3.jsx" defer type="text/babel"></script> -->
+  <script src="solutionStage4.jsx" defer type="text/babel"></script>
 </body>
 </html>
