--- a/standalone.html
+++ b/standalone.html
@@ -4,7 +4,9 @@
   <title>ATM Machine</title>
   <!-- Don't use this in production: -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
+  <style type="text/css">
+     .tab { margin-left: 10ch; }
+  </style>
   <!-- ----------------- Bootstrap header START ----------------- -->
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -20,6 +22,8 @@
     }
     body {
         background-color: lightblue;
+        margin-left: 5ch;
+        margin-top: 5ch;
     }
   </style>
 </head>
@@ -31,9 +35,9 @@
   <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
 
-  <!-- Load our React component. -->
-  <!-- <script src="account1.jsx"       defer type="text/babel"></script> -->
-  <!-- <script src="solutionStage3.jsx" defer type="text/babel"></script> -->
-  <script src="solutionStage4.jsx" defer type="text/babel"></script>
+    <!-- Load our React component. -->
+    <!-- <script src="account1.jsx"       defer type="text/babel"></script> -->
+    <!-- <script src="solutionStage3.jsx" defer type="text/babel"></script> -->
+    <script src="solutionStage4.jsx" defer type="text/babel"></script>
 </body>
 </html>
