Rename gitignore folder

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <!-- Load our React component. -->
     <!-- <script src="account1.jsx"       defer type="text/babel"></script> -->
     <!-- <script src="solutionStage3.jsx" defer type="text/babel"></script> -->
-    <script src="solutionStage4.jsx" defer type="text/babel"></script>
+    <script src="./gitignore/solutionStage1.jsx" defer type="text/babel"></script>
 </body>
 </html>
